--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.3.2",
+    "@mapbox/mapbox-gl-draw": "^1.4.3",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
@@ -24,6 +25,7 @@
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-hover-card": "^1.0.7",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-menubar": "^1.0.4",
     "@radix-ui/react-navigation-menu": "^1.1.4",
@@ -41,13 +43,20 @@
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@react-google-maps/api": "^2.19.2",
+    "@thirdweb-dev/react": "^4.1.7",
+    "@thirdweb-dev/sdk": "^4.0.14",
+    "@turf/turf": "^6.5.0",
     "@types/mapbox-gl": "^2.7.18",
     "@waku/sdk": "^0.0.21",
     "@web3modal/wagmi": "^3.3.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
+    "components": "^0.1.0",
     "date-fns": "^2.30.0",
+    "ethers": "^5.7.2",
+    "firebase": "^10.6.0",
     "framer-motion": "^10.16.5",
     "lucide-react": "^0.292.0",
     "mapbox-gl": "^2.15.0",
@@ -59,6 +68,8 @@
     "react-hook-form": "^7.48.2",
     "react-map-gl": "^7.1.6",
     "react-router-dom": "^6.18.0",
+    "styled": "^1.0.0",
+    "styled-components": "^6.1.1",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
     "viem": "^1.19.3",
@@ -71,7 +82,7 @@
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
-    "@vitejs/plugin-react": "^4.0.3",
+    "@vitejs/plugin-react": "^4.2.0",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
@@ -79,6 +90,7 @@
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "vite-plugin-node-polyfills": "^0.16.0"
   }
 }
