--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.3.2",
     "@mapbox/mapbox-gl-draw": "^1.4.3",
+    "@mediapipe/camera_utils": "^0.3.1675466862",
+    "@mediapipe/face_detection": "^0.4.1646425229",
+    "@mediapipe/face_mesh": "^0.4.1633559619",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
@@ -58,8 +61,8 @@
     "components": "^0.1.0",
     "date-fns": "^2.30.0",
     "ethers": "^5.7.2",
-    "firebase": "^10.6.0",
     "ffjavascript": "^0.2.62",
+    "firebase": "^10.6.0",
     "framer-motion": "^10.16.5",
     "latlon-geohash": "^2.0.0",
     "lucide-react": "^0.292.0",
@@ -72,9 +75,10 @@
     "react-hook-form": "^7.48.2",
     "react-map-gl": "^7.1.6",
     "react-router-dom": "^6.18.0",
+    "react-use-face-detection": "^1.0.1",
+    "snarkjs": "^0.7.2",
     "styled": "^1.0.0",
     "styled-components": "^6.1.1",
-    "snarkjs": "^0.7.2",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
     "viem": "^1.19.3",
